make-a-wish-salesforce/src/objects/LMS_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting contains LMS Credential details.</description>
    <fields>
        <fullName>CourseEndpoint__c</fullName>
        <description>This field contains the Course endpoint url</description>
        <label>CourseEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentEndPoint__c</fullName>
        <description>This Field contain the relative url for Enrollment</description>
        <label>EnrollmentEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSOEndPoint__c</fullName>
        <description>This find contains the relative end point for SSO</description>
        <label>SSOEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCreaationEndpoint__c</fullName>
        <description>This field contains the relative url for the LMS user creation/activation</description>
        <label>UserCreaationEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LMS Credentials</label>
</CustomObject>